public enum AgeDivision {
    Junior, Senior, Master
}
