package TCGTournamentSoftware;

public interface pointCalculator {
    void calculateChampionshipPoints(DivisionTournament tournament);

}
